# dataroomcloud

./: README.md  db.sqlite3  manage.py  pyproject.toml
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_diretório_subdiretório_arquivo.py  0003_rename_diretório_diretorio_and_more.py  0004_alter_arquivo_arquivo.py  0005_alter_arquivo_arquivo.py  0006_alter_arquivo_arquivo.py  0007_alter_arquivo_arquivo.py  0008_alter_arquivo_arquivo.py  0009_alter_arquivo_arquivo.py  0010_alter_arquivo_arquivo.py  0011_alter_arquivo_arquivo.py  0012_alter_arquivo_arquivo.py  0013_consideracao.py  0014_consideracao_is_aprovada.py  0015_fileactionlog.py  0016_delete_fileactionlog.py  0017_alter_arquivo_arquivo.py
core/templates/: base.html
core/templates/core/: directory_list.html  file_details.html  files.html  home.html  main_directories.html  profile.html  subdirectories.html
core/templates/core/css/: styles.css
core/templates/registration/: login.html  register.html
dataroomcloud/: asgi.py  settings.py  urls.py  wsgi.py
